# cracken

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
benches/: bench.rs
benchmarks/: README.md  bench_results.json  bench_results_detailed.json  create-bench-graphs.ipynb  run_bench.py
src/: charsets.rs  create_smartlist.rs  generators.rs  helpers.rs  lib.rs  main.rs  mask.rs  password_entropy.rs  runner.rs  stackbuf.rs  wordlists.rs
talk/: README.md  rockyou_hybrid-masks_counts.csv
test-resources/: upper-lower-1-4.txt_expected.txt  upper-lower-year-1-4.txt  vocab.txt  wordlist-simple.txt_expected.txt  wordlist1.txt  wordlist2.txt
