[package]
name = "cracken"
version = "0.1.8"
authors = ["shmuelamar"]
edition = "2021"
build = "build.rs"
description = "a fast password wordlist generator"
homepage = "https://github.com/shmuelamar/cracken"
repository = "https://github.com/shmuelamar/cracken"
keywords = ["password", "crack", "cracking", "wordlist-generator", "security"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "cracken"
path = "src/lib.rs"

[[bin]]
name = "cracken"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
aho-corasick = "~0.7"
clap = { version = "~2.33.0", features = [ "suggestions", "color" , "wrap_help"] }
itertools = "~0.10"
lazy_static = "~1.4.0"
num-bigint = "~0.4.0"
ordered-float = "~2.0.0"
pathfinding = "~0.5.0"
regex = "~1"
simple-error = "~0.2"
tokenizers = "~0.11.0"

[dev-dependencies]
criterion = "~0.3.5"

[build-dependencies]
built = "~0.4.4"
